[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_scenes/message_speller.gd" type="Script" id=1]
[ext_resource path="res://sound_scenes/random_audio_player.tscn" type="PackedScene" id=2]

[node name="MessageSpeller" type="Node2D"]
script = ExtResource( 1 )

[node name="RandomDotPlayer" parent="." instance=ExtResource( 2 )]
sound_count = 30
asset_path = "res://assets/sounds/dots/dot_%d.wav"
force_play = true

[node name="RandomDashPlayer" parent="." instance=ExtResource( 2 )]
sound_count = 30
asset_path = "res://assets/sounds/dashes/dash_%d.wav"
force_play = true

[node name="RandomWrongPlayer" parent="." instance=ExtResource( 2 )]
sound_count = 4
asset_path = "res://assets/sounds/wrongs/wrong_%d.wav"
force_play = true

[node name="SymbolParticles" type="Node2D" parent="."]
z_index = 20
